--- a/petrov_day.tex
+++ b/petrov_day.tex
@@ -1097,7 +1097,7 @@ increase in the world death rate, although many lives could be saved through
 dramatic programs to "stretch" the carrying capacity of the earth by increasing
 food production and providing for more equitable distribution of whatever food
 is available. But these programs will only provide a stay of execution unless
-they are accompanied by determined and successful efforts to at population
+they are accompanied by determined and successful efforts at population
 control. Population control is the conscious regulation of the numbers of human
 beings to meet the needs not just of individual families, but of society as a
 whole.
