Fixed typos and layout
Fixed minor typos.
Updated the page numbers of the double-sided booklet.

--- a/petrov_day.tex
+++ b/petrov_day.tex
@@ -199,8 +199,8 @@ Tradu\c{c}\~{a}o em portugu\^{e}s do Brasil por Bruno Parga, setembro de 2017.
 %\stagedir{Content warning: Engineered to evoke strong feelings of existential terror.}
 
 \stagedir{Instru\c{c}\~{o}es como estas v\^{e}m em it\'{a}lico. Todo o restante do texto deve
-ser lido em voz alta. Sempre que houver uma linha horizontal, \'{e} a vez da pr\'{o}
-xima pessoa ler, seguindo em sentido hor\'{a}rio. Ao ler cita\c{c}\~{o}es, n\~{a}o \'{e} necess\'{a}rio
+ser lido em voz alta. Sempre que houver uma linha horizontal, \'{e} a vez da pr\'{o}xima
+pessoa ler, seguindo em sentido hor\'{a}rio. Ao ler cita\c{c}\~{o}es, n\~{a}o \'{e} necess\'{a}rio
 ler o nome e data no final.}
 
 Hoje, 26 de setembro, \'{e} o Dia de Petrov. Em 1983, a est\'{o}ria da humanidade quase
@@ -241,8 +241,8 @@ todas as outras luzes do recinto.}
 
 Os arque\'{o}logos se dividem em dizer que o fogo foi utilizado pela primeira vez
 pelo "Homo erectus" ou pelo "Homo ergaster", em algum ponto entre 400 mil e
-1.7 milh\~{o}es de anos atr\'{a}s. O cozimento dos alimentos deve ter possibilitado c\'{e}
-rebros maiores, que consumiam mais energia, dando caminho \`{a} evolu\c{c}\~{a}o de uma
+1.7 milh\~{o}es de anos atr\'{a}s. O cozimento dos alimentos deve ter possibilitado 
+c\'{e}rebros maiores, que consumiam mais energia, dando caminho \`{a} evolu\c{c}\~{a}o de uma
 intelig\^{e}ncia mais avan\c{c}ada e da linguagem.
 
 \divider
@@ -268,10 +268,10 @@ uma esp\'{e}cie ganhar fibra moral e, em alguns casos, melhorar a postura.}{Terr
 
 \skull{images/H_ergaster.png}{"Homo ergaster"}
 \skull{images/H_erectus.png}{"Homo erectus"}
-\skull{images/H_florensiensis.png}{"Homo florensiensis"}
+\skull{images/H_florensiensis.png}{"Homo florensiensis"} \\
 \skull{images/H_habilis.png}{"Homo habilis"}
 \skull{images/H_heidelbergensis.png}{"Homo heidelbergensis"}
-\skull{images/H_neanderthalis.png}{"Homo neanderthalis"}
+\skull{images/H_neanderthalis.png}{"Homo neanderthalis"} \\
 \skull{images/H_rudolfensis.png}{"Homo rudolfensis"}
 
 
@@ -301,7 +301,7 @@ uma esp\'{e}cie ganhar fibra moral e, em alguns casos, melhorar a postura.}{Terr
 % Source: http://www.slate.com/articles/health_and_science/new_scientist/2012/03/noam_chomsky_on_linguistics_and_climate_change_.html
 
 \blockquote{Certamente n\~{a}o se trata de um verdadeiro instinto, pois cada idioma
-deve ser aprendido. \'{e} nitidamente diferente, por\'{e}m, de todas as artes comuns,
+deve ser aprendido. \'{E} nitidamente diferente, por\'{e}m, de todas as artes comuns,
 pois as pessoas t\^{e}m uma tend\^{e}ncia instintiva a falar, como vemos no balbucio de
 nossas crian\c{c}as pequenas; por contraste, nenhuma crian\c{c}a tem uma tend\^{e}ncia
 instintiva a cozinhar, a fermentar bebidas ou a escrever.}{Charles Darwin,
@@ -336,8 +336,8 @@ Quando todos tiverem falado, ponha a vela de volta no candelabro.}
 A linguagem \'{e} a primeira chave da tecnologia; com ela, os primeiros humanos
 podiam acumular conhecimento n\~{a}o apenas em genes mas tamb\'{e}m em ditos e tradi\c{c}\~{o}es.
 
-Eles deram nomes às pessoas ao seu redor. Deram nomes a esp\'{e}cies de animais e
-plantas. Deram nomes a a\c{c}\~{o}es e lugares e estrat\'{e}gias. Chamaram algumas dessas
+Eles deram nomes \`{a}s pessoas ao seu redor. Deram nomes a esp\'{e}cies de animais e
+plantas. Deram nomes a a\c{c}\~{o}es, lugares e estrat\'{e}gias. Chamaram algumas dessas
 coisas de 'boas', e chamaram outras de 'm\'{a}s'. Aprenderam a compartilhar seu
 conhecimento, e aprenderam a enganar um ao outro. Constru\'{\i}ram fam\'{\i}lias e
 comunidades.
@@ -586,7 +586,7 @@ o trem da hist\'{o}ria descarrilou devido a uma grande peste.
 \stagedir{Pegue a quarta vela, que representa o progresso da ci\^{e}ncia. Segure-a,
 enquanto l\^{e} a cita\c{c}\~{a}o.}
 
-\blockquote{Em o ano da era de mil trezentos e quarenta e oito anos veio a
+\blockquote{No ano da era de mil trezentos e quarenta e oito anos veio a
 pestil\^{e}ncia e a mortandade de dor de levadigas por todo o mundo, t\~{a}o grande que
 l\'{a} n\~{a}o ficaram vivos um d\'{e}cimo dos homens e mulheres que l\'{a} ent\~{a}o havia. E no
 dito ano morreram o prior, o chantre e todos os ra\c{c}oeiros da igreja de S\~{a}o Pedro
@@ -704,7 +704,7 @@ entendido o que eu dissera. Eu lhe pedi para repetir as palavras. Ele respondeu:
 
 \divider
 
-\blockquote{\'{e} sem exagero que eu digo que elaborei 3.000 hip\'{o}teses diferentes
+\blockquote{\'{E} sem exagero que eu digo que elaborei 3.000 hip\'{o}teses diferentes
 em rela\c{c}\~{a}o \`{a} luz el\'{e}trica, todas elas razo\'{a}veis e aparentemente prov\'{a}veis de
 serem verdadeiras. Mas apenas em dois casos os meus experimentos comprovaram a
 verdade da minha hip\'{o}tese. Minha principal dificuldade foi em construir o
@@ -770,7 +770,7 @@ associado a ela, mas esses nomes n\~{a}o importam muito.
 % Political Science {{{
 \page{
 % Sneaky quote
-\blockquoteUnattributed{Ests inven\c{c}\~{o}es materiais, come\c{c}ando com o uso de pedras
+\blockquoteUnattributed{Estas inven\c{c}\~{o}es materiais, come\c{c}ando com o uso de pedras
 como armas, o que levou \`{a} domestica\c{c}\~{a}o de animais, a produ\c{c}\~{a}o do fogo por meios
 artificiais, at\'{e} \`{a}s maravilhosas inven\c{c}\~{o}es de nossos dias, demonstram claramente
 que em cada caso o iniciador foi um indiv\'{\i}duo. Quanto mais pr\'{o}ximos chegamos de
@@ -889,7 +889,7 @@ Em 1959, o Lunik 2, o primeiro sat\'{e}lite a chegar \`{a} Lua.
 
 \divider
 
-Quando a nossa tecnologia decolou - literal e figurativamente -, ningu\'{e}m sabia
+Quando a nossa tecnologia decolou - literal e figurativamente - ningu\'{e}m sabia
 o que \'{\i}amos encontrar. Predizer o futuro era algo que cabia principalmente a
 autores de fic\c{c}\~{a}o cient\'{\i}fica, e suas previs\~{o}es n\~{a}o eram especialmente acuradas.
 Mas alguns cientistas levaram as quest\~{o}es importantes a s\'{e}rio. Por exemplo:
@@ -1316,8 +1316,6 @@ A intelig\^{e}ncia totalmente geral, no entanto, continuava inating\'{\i}vel.
 os computadores.}{Ken Jennings, campe\~{a}o do programa de perguntas e respostas
 Jeopardy, ap\'{o}s perder para o computador Watson, da IBM}
 
-\divider
-
 Como se descobriu em 2011, Jeopardy n\~{a}o era t\~{a}o dif\'{\i}cil quanto pens\'{a}vamos. Mas
 a intelig\^{e}ncia totalmente geral permanece inating\'{\i}vel. 
 
@@ -1329,8 +1327,8 @@ N\'{o}s achamos que ela \'{e} dif\'{\i}cil.
 \page{
 
 Ser\'{a} que o progresso na computa\c{c}\~{a}o realmente nos amea\c{c}a? At\'{e} aqui, sempre que a
-ci\^{e}ncia e a tecnologia avan\c{c}aram, o florescimento da humanidade avan\c{c}ou pari
-passu. N\'{o}s constru\'{\i}mos horrores, \'{e} certo: metralhadoras e g\'{a}s mostarda e mesmo
+ci\^{e}ncia e a tecnologia avan\c{c}aram, o florescimento da humanidade avan\c{c}ou \textit{pari
+passu}. N\'{o}s constru\'{\i}mos horrores, \'{e} certo: metralhadoras e g\'{a}s mostarda e mesmo
 bombas at\^{o}micas. Mas seu impacto agregado na vida humana \'{e} min\'{u}sculo comparado ao
 da avia\c{c}\~{a}o, das telecomunica\c{c}\~{o}es, dos antibi\'{o}ticos e de dez mil outros milagres.
 
@@ -1459,11 +1457,5 @@ N\~{a}o nos esque\c{c}amos do poder que temos, e do que realmente somos.
 } %}}}
 
 \pagenumbering{gobble}
-\sidePage{}
-
-% Rear cover {{{
-\sidePage{
-}
-% }}}
 
 \end{document}
