Minor revision, changed a few words and fixed some quotemarks

--- a/petrov_day.tex
+++ b/petrov_day.tex
@@ -14,7 +14,9 @@
 
 \begin{document}
 \author{James Babcock (jimrandomh@gmail.com)}
-\author{Tradu\c{c}\~{a}o: Bruno Parga (brunoparga@gmail.com}
+\author{Tradu\c{c}\~{a}o: Bruno Parga (brunoparga@gmail.com)}
+\author{Revis\~{a}o: Leo Arruda (leohmarruda@gmail.com)}
+
 \title{Dia de Petrov}
 
 % Ideas to incorporate {{{
@@ -141,12 +143,15 @@
 
 \begin{flushright}
 \parbox{3in}{
-	\begin{center}
-		\Huge{Dia de Petrov}\newline
-		\large{26 de setembro}\newline
-		\large{Por James Babcock}\newline
-		\small{Tradu\c{c}\~{a}o por Bruno Parga}\newline
-	\end{center}
+\begin{center}
+    \Huge{Dia de Petrov} \\
+    \vspace{0.1cm}
+    \large{26 de setembro} \\
+    \vspace{0.3cm}
+    \large{Por James Babcock} \\
+    \vspace{0.2cm}
+    \small{Traduzido por Bruno Parga}
+\end{center}
 }
 \end{flushright}
 
@@ -157,12 +162,12 @@
 
     O Dia de Petrov \'{e} um evento anual no dia 26 de setembro, rememorando o 
 incidente Petrov: um alarme falso no sistema de alerta r\'{a}pido soviético
-que praticamente desencadeou uma guerra nuclear. O prop\'{o}sito do ritual \'{e}
+que quase desencadeou uma guerra nuclear. O prop\'{o}sito do ritual \'{e}
 tornar o risco catastr\'{o}fico e existencial emocionalmente saliente, colocando-o
 num contexto hist\'{o}rico e oferecendo exemplos positivos e negativos de
 como a humanidade lidou com ele. A atividade \'{e} desaconselh\'{a}vel para pessoas
-fr\'{a}geis e n\~{a}o \'{e} destinada a principiantes; \'{e} direcionada \`{a}queles que j\'{a} sabem
-o que \'{e} o risco existencial e catastr\'{o}fico, t\^{e}m algum conhecimento pr\'{e}vio
+fr\'{a}geis e n\~{a}o \'{e} destinada a leigos; \'{e} direcionada \`{a}queles que j\'{a} sabem
+o que s\~{a}o riscos catastr\'{o}ficos e existenciais , t\^{e}m algum conhecimento pr\'{e}vio
 sobre quais s\~{a}o esses riscos, e acreditam - ao menos num n\'{\i}vel abstrato - 
 que \'{e} importante impedir que esses riscos se concretizem.
 
@@ -176,7 +181,7 @@ Voc\^{e} vai precisar de:
 	\item Um candelabro para 9 velas
 	\item 8 velas e algo para acend\^{e}-las (isqueiro, f\'{o}sforos)
 	\item Um extintor de inc\^{e}ndio de f\'{a}cil acesso, caso necess\'{a}rio
-	\item Um bloco de fichas de arquivo ou notas autoadesivas, mais canetas
+	\item Um bloco de cart\~{o}es de notas ou de notas autoadesivas, e canetas
 \end{itemize}
 
 } % }}}
@@ -189,6 +194,7 @@ Yudkowsky pela ideia de comemorar o Dia de Petrov, e a todos os participantes
 de testes, organizadores de eventos e outros que possibilitaram este ritual.
 
 Tradu\c{c}\~{a}o em portugu\^{e}s do Brasil por Bruno Parga, setembro de 2017.
+Revis\~{a}o por Leo Arruda, setembro de 2024.
 
 } % }}}
 
@@ -203,7 +209,7 @@ ser lido em voz alta. Sempre que houver uma linha horizontal, \'{e} a vez da pr\
 pessoa ler, seguindo em sentido hor\'{a}rio. Ao ler cita\c{c}\~{o}es, n\~{a}o \'{e} necess\'{a}rio
 ler o nome e data no final.}
 
-Hoje, 26 de setembro, \'{e} o Dia de Petrov. Em 1983, a est\'{o}ria da humanidade quase
+Hoje, 26 de setembro, \'{e} o Dia de Petrov. Em 1983, a hist\'{o}ria da humanidade quase
 terminou. Estamos reunidos aqui para recordar esse momento, e outros como ele.
 Mas, para realmente sentir a imensid\~{a}o destes eventos, precisamos visit\'{a}-los em
 seu contexto apropriado. Vamos contar a est\'{o}ria da hist\'{o}ria humana, come\c{c}ando
@@ -224,7 +230,7 @@ dos mitos, dos f\'{o}sseis e das lendas. Come\c{c}a com a inven\c{c}\~{a}o do fo
 \page{
 \blockquote{Sou quem roubou, ca\c{c}ada no oco duma cana, a fonte do fogo, que se
 revelou, para a humanidade, mestre de todas as artes e tesouro inestim\'{a}vel.
-Esse o pecado que resgato, pregado nestas cadeias ao relento.}{\'{E}squilo, "Prometeu Acorrentado"}
+Esse o pecado que resgato, pregado nestas cadeias ao relento.}{\'{E}squilo, ``Prometeu Acorrentado"}
 
 \candelabrum{images/candelabrum1.png}
 
@@ -240,7 +246,7 @@ todas as outras luzes do recinto.}
 \page {
 
 Os arque\'{o}logos se dividem em dizer que o fogo foi utilizado pela primeira vez
-pelo "Homo erectus" ou pelo "Homo ergaster", em algum ponto entre 400 mil e
+pelo ``Homo erectus" ou pelo ``Homo ergaster", em algum ponto entre 400 mil e
 1.7 milh\~{o}es de anos atr\'{a}s. O cozimento dos alimentos deve ter possibilitado 
 c\'{e}rebros maiores, que consumiam mais energia, dando caminho \`{a} evolu\c{c}\~{a}o de uma
 intelig\^{e}ncia mais avan\c{c}ada e da linguagem.
@@ -266,13 +272,13 @@ uma esp\'{e}cie ganhar fibra moral e, em alguns casos, melhorar a postura.}{Terr
 	}
 } %}}}
 
-\skull{images/H_ergaster.png}{"Homo ergaster"}
-\skull{images/H_erectus.png}{"Homo erectus"}
-\skull{images/H_florensiensis.png}{"Homo florensiensis"} \\
-\skull{images/H_habilis.png}{"Homo habilis"}
-\skull{images/H_heidelbergensis.png}{"Homo heidelbergensis"}
-\skull{images/H_neanderthalis.png}{"Homo neanderthalis"} \\
-\skull{images/H_rudolfensis.png}{"Homo rudolfensis"}
+\skull{images/H_ergaster.png}{``Homo ergaster"}
+\skull{images/H_erectus.png}{``Homo erectus"}
+\skull{images/H_florensiensis.png}{``Homo florensiensis"} \\
+\skull{images/H_habilis.png}{``Homo habilis"}
+\skull{images/H_heidelbergensis.png}{``Homo heidelbergensis"}
+\skull{images/H_neanderthalis.png}{``Homo neanderthalis"} \\
+\skull{images/H_rudolfensis.png}{``Homo rudolfensis"}
 
 
 } %}}}
@@ -338,7 +344,7 @@ podiam acumular conhecimento n\~{a}o apenas em genes mas tamb\'{e}m em ditos e t
 
 Eles deram nomes \`{a}s pessoas ao seu redor. Deram nomes a esp\'{e}cies de animais e
 plantas. Deram nomes a a\c{c}\~{o}es, lugares e estrat\'{e}gias. Chamaram algumas dessas
-coisas de 'boas', e chamaram outras de 'm\'{a}s'. Aprenderam a compartilhar seu
+coisas de `boas', e chamaram outras de `xm\'{a}s'. Aprenderam a compartilhar seu
 conhecimento, e aprenderam a enganar um ao outro. Constru\'{\i}ram fam\'{\i}lias e
 comunidades.
 
@@ -661,7 +667,7 @@ Podem penetrar as mans\~{o}es dos deuses\newline
 E escalar as alturas dos c\'{e}us. Erguei-vos,\newline
 Mortais, e deixando de lado preocupa\c{c}\~{o}es terrenas\newline
 Discerni o poder da mente celestial,\newline
-Remota e distante da vida do gado!}{Edmund Halley, pref\'{a}cio aos 'Principia Mathematica' de Newton (1687)}
+Remota e distante da vida do gado!}{Edmund Halley, pref\'{a}cio aos \newline``Principia Mathematica" de Newton (1687)}
 
 } %}}}
 
@@ -673,7 +679,7 @@ universal quais expectativas s\~{a}o justificadas por um experimento qualquer,
 conforme o n\'{u}mero de vezes em que tenha falhado ou sido bem-sucedido; e o que
 se deve pensar da probabilidade de que qualquer causa em particular na natureza,
 com a qual tenhamos qualquer grau de familiaridade, produzir\'{a} ou n\~{a}o, num dado
-evento, um efeito que tenha sido vinculado a ela.}{Rev. Thomas Bayes, 'Ensaio buscando resolver um problema na doutrina das probabilidades' (1763)}
+evento, um efeito que tenha sido vinculado a ela.}{Rev. Thomas Bayes, ``Ensaio buscando resolver um problema na doutrina das probabilidades" (1763)}
 
 \divider
 
@@ -697,10 +703,10 @@ somente num ponto uma corre\c{c}\~{a}o pareceu necess\'{a}ria.}{Dmitri Mendel\^{
 
 \divider
 
-\blockquote{Ent\~{a}o eu gritei no bocal a seguinte frase: 'Sr. Watson, venha aqui,
+\blockquote{Ent\~{a}o eu gritei no bocal a seguinte frase: `Sr. Watson, venha aqui,
 eu quero v\^{e}-lo'. Para minha alegria ele veio e declarou que havia ouvido e
 entendido o que eu dissera. Eu lhe pedi para repetir as palavras. Ele respondeu:
-``Voc\^{e} disse: Sr. Watson, venha aqui, eu quero v\^{e}-lo.''}{Alexander Graham Bell (1876)}
+`Voc\^{e} disse: Sr. Watson, venha aqui, eu quero v\^{e}-lo.' }{Alexander Graham Bell (1876)}
 
 \divider
 
@@ -728,7 +734,7 @@ maior parte, para melhor.
 
 \blockquote{Se n\'{o}s retirarmos continuamente amostras da urna de descobertas
 tecnol\'{o}gicas poss\'{\i}veis, antes de implementarmos meios efetivos de coordena\c{c}\~{a}o,
-vigil\^{a}ncia e/ou restri\c{c}\~{a}o globais a informa\c{c}\~{a}o potencialmente perigosa,
+vigil\^{a}ncia e/ou restri\c{c}\~{a}o globais a informa\c{c}\~{o}es potencialmente perigosas,
 arriscamos acabar tirando uma bola preta: uma interven\c{c}\~{a}o f\'{a}cil de realizar e
 que causa danos extremamente amplos, contra a qual a defesa efetiva \'{e}
 impratic\'{a}vel.}{Nick Bostrom (2013)}
@@ -1108,7 +1114,7 @@ desastre previsto que n\~{a}o se concretizou.
 1970 e 80, centenas de milh\~{o}es de pessoas v\~{a}o morrer de fome a despeito de
 quaisquer programas de emerg\^{e}ncia que se iniciem agora. Neste ponto t\~{a}o tardio,
 nada pode impedir um aumento substancial na taxa mundial de mortalidade, embora
-muitas vidas possam ser salvas por programas dram\'{a}ticos destinados a "esticar"
+muitas vidas possam ser salvas por programas dram\'{a}ticos destinados a ``esticar"
 a capacidade de sustento do planeta por meio do aumento da produ\c{c}\~{a}o de alimentos
 e uma distribui\c{c}\~{a}o mais equitativa da comida dispon\'{\i}vel. Mas estes programas s\'{o}
 adiariam a cat\'{a}strofe a menos que tamb\'{e}m se empreenda um determinado e eficaz
