--- a/petrov_day.tex
+++ b/petrov_day.tex
@@ -3,7 +3,7 @@
 
 % TODO: Make this different for two-sided printing than for two-up printing
 % (two-up should have equal L/R margins)
-\usepackage[paperwidth=5.83in, paperheight=8.27in, twoside, top=0.7in, bottom=0.7in, inner=0.5in, outer=0.9in]{geometry}
+\usepackage[paperwidth=5.5in, paperheight=8.5in, twoside, top=0.8in, bottom=0.8in, inner=0.6in, outer=1.0in]{geometry}
 
 \usepackage{caption}
 \usepackage{subcaption}
@@ -138,6 +138,9 @@
 
 % Front Matter
 % Title page {{{
+% Center Title
+\newgeometry{top=0.8in, bottom=0.8in, inner=0.38in, outer=1.22in}
+
 \pagenumbering{gobble}
 \sidePage{
 
@@ -145,7 +148,7 @@
 \parbox{3in}{
 \begin{center}
     \Huge{Dia de Petrov} \\
-    \vspace{0.1cm}
+    \vspace{0.2cm}
     \large{26 de setembro} \\
     \vspace{0.3cm}
     \large{Por James Babcock} \\
@@ -155,6 +158,7 @@
 }
 \end{flushright}
 
+\restoregeometry
 } % }}}
 % What-is-this page 1 {{{
 \pagenumbering{arabic}
@@ -178,11 +182,12 @@ Voc\^{e} vai precisar de:
 \begin{itemize} \itemsep0pt \parskip0pt \parsep0pt
 	\item Uma c\'{o}pia deste programa para cada participante
 	\item Uma mesa com cadeiras para todos
-	\item Um candelabro para 9 velas
+	\item Um candelabro para 9 velas -- não é imprescindível, mas altamente desejável
 	\item 8 velas e algo para acend\^{e}-las (isqueiro, f\'{o}sforos)
 	\item Um extintor de inc\^{e}ndio de f\'{a}cil acesso, caso necess\'{a}rio
 	\item Um bloco de cart\~{o}es de notas ou de notas autoadesivas, e canetas
 \end{itemize}
+Obs: procure realizar em um lugar protegido do vento para que as velas não fiquem se apagando.
 
 } % }}}
 % What-is-this page 2 {{{
@@ -344,7 +349,7 @@ podiam acumular conhecimento n\~{a}o apenas em genes mas tamb\'{e}m em ditos e t
 
 Eles deram nomes \`{a}s pessoas ao seu redor. Deram nomes a esp\'{e}cies de animais e
 plantas. Deram nomes a a\c{c}\~{o}es, lugares e estrat\'{e}gias. Chamaram algumas dessas
-coisas de `boas', e chamaram outras de `xm\'{a}s'. Aprenderam a compartilhar seu
+coisas de `boas', e chamaram outras de `m\'{a}s'. Aprenderam a compartilhar seu
 conhecimento, e aprenderam a enganar um ao outro. Constru\'{\i}ram fam\'{\i}lias e
 comunidades.
 
