center cover title, remove some quote marks.

--- a/petrov_day.tex
+++ b/petrov_day.tex
@@ -3,7 +3,7 @@
 
 % TODO: Make this different for two-sided printing than for two-up printing
 % (two-up should have equal L/R margins)
-\usepackage[paperwidth=5.5in, paperheight=8.5in, twoside, top=0.8in, bottom=0.8in, inner=0.6in, outer=1.0in]{geometry}
+\usepackage[paperwidth=5.83in, paperheight=8.27in, twoside, top=0.7in, bottom=0.7in, inner=0.5in, outer=0.9in]{geometry}
 
 \usepackage{caption}
 \usepackage{subcaption}
@@ -139,7 +139,7 @@
 % Front Matter
 % Title page {{{
 % Center Title
-\newgeometry{top=0.8in, bottom=0.8in, inner=0.38in, outer=1.22in}
+\newgeometry{top=0.8in, bottom=0.8in, inner=0.22in, outer=1.38in}
 
 \pagenumbering{gobble}
 \sidePage{
@@ -235,7 +235,7 @@ dos mitos, dos f\'{o}sseis e das lendas. Come\c{c}a com a inven\c{c}\~{a}o do fo
 \page{
 \blockquote{Sou quem roubou, ca\c{c}ada no oco duma cana, a fonte do fogo, que se
 revelou, para a humanidade, mestre de todas as artes e tesouro inestim\'{a}vel.
-Esse o pecado que resgato, pregado nestas cadeias ao relento.}{\'{E}squilo, ``Prometeu Acorrentado"}
+Esse o pecado que resgato, pregado nestas cadeias ao relento.}{\'{E}squilo, Prometeu Acorrentado}
 
 \candelabrum{images/candelabrum1.png}
 
@@ -672,7 +672,7 @@ Podem penetrar as mans\~{o}es dos deuses\newline
 E escalar as alturas dos c\'{e}us. Erguei-vos,\newline
 Mortais, e deixando de lado preocupa\c{c}\~{o}es terrenas\newline
 Discerni o poder da mente celestial,\newline
-Remota e distante da vida do gado!}{Edmund Halley, pref\'{a}cio aos \newline``Principia Mathematica" de Newton (1687)}
+Remota e distante da vida do gado!}{Edmund Halley, pref\'{a}cio aos \newline Principia Mathematica de Newton (1687)}
 
 } %}}}
 
@@ -684,7 +684,7 @@ universal quais expectativas s\~{a}o justificadas por um experimento qualquer,
 conforme o n\'{u}mero de vezes em que tenha falhado ou sido bem-sucedido; e o que
 se deve pensar da probabilidade de que qualquer causa em particular na natureza,
 com a qual tenhamos qualquer grau de familiaridade, produzir\'{a} ou n\~{a}o, num dado
-evento, um efeito que tenha sido vinculado a ela.}{Rev. Thomas Bayes, ``Ensaio buscando resolver um problema na doutrina das probabilidades" (1763)}
+evento, um efeito que tenha sido vinculado a ela.}{Rev. Thomas Bayes, Ensaio buscando resolver um problema na doutrina das probabilidades (1763)}
 
 \divider
 
@@ -1273,8 +1273,8 @@ otimiza\c{c}\~{a}o. Isto \'{e} fatal para n\'{o}s, se a IA n\~{a}o escolher espe
 acordo com o crit\'{e}rio de como esta transforma\c{c}\~{a}o afeta padr\~{o}es existentes como
 a biologia e as pessoas. A IA n\~{a}o te odeia, e nem te ama, mas voc\^{e} \'{e} feito de
 \'{a}tomos que ela pode usar para algum outro fim. Ela opera numa escala de tempo
-diferente da sua; at\'{e} seus neur\^{o}nios terminarem de pensar as palavras ``eu
-devia fazer alguma coisa'', voc\^{e} j\'{a} perdeu.}{Eliezer Yudkowsky, Intelig\^{e}ncia
+diferente da sua; at\'{e} seus neur\^{o}nios terminarem de pensar as palavras `eu
+devia fazer alguma coisa', voc\^{e} j\'{a} perdeu.}{Eliezer Yudkowsky, Intelig\^{e}ncia
 Artificial como um Fator Positivo e Negativo para o Risco Global (2006)}
 % perdeu, preib\'{o}i
 
